crates/parser/tests/snapshots/block_string_gen_literal_clip_emptyln_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-gen-literal-clip-emptyln-dedent

## Input

```
key |
  a

  b
end marker

```

## CST

```
SOURCE_FILE@0..26
  ENTRY@0..15
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..15
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..9
        STRING@8..9 "a"
      NEWLINE@9..10 "\n"
      LINE_STRING@10..10
      NEWLINE@10..11 "\n"
      SPACE@11..13 "  "
      LINE_STRING@13..14
        STRING@13..14 "b"
      NEWLINE@14..15 "\n"
  ENTRY@15..26
    WORD_KEY@15..18
      WORD@15..18 "end"
    SPACE@18..19 " "
    LINE_STRING@19..25
      STRING@19..25 "marker"
    NEWLINE@25..26 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    indent: none,
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..9 "a",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@13..14 "b",
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@15..18 "end",
            },
            value: LineString {
                string: STRING@19..25 "marker",
            },
        },
    ],
}
```

vim:ft=markdown
