crates/parser/tests/snapshots/block_string_gen_literal_clip_extra_indent_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-gen-literal-clip-extra-indent-dedent

## Input

```
key |
  a
    b
  c
end marker

```

## CST

```
SOURCE_FILE@0..31
  ENTRY@0..20
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..20
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..9
        STRING@8..9 "a"
      NEWLINE@9..10 "\n"
      SPACE@10..12 "  "
      LINE_STRING@12..15
        STRING@12..15 "  b"
      NEWLINE@15..16 "\n"
      SPACE@16..18 "  "
      LINE_STRING@18..19
        STRING@18..19 "c"
      NEWLINE@19..20 "\n"
  ENTRY@20..31
    WORD_KEY@20..23
      WORD@20..23 "end"
    SPACE@23..24 " "
    LINE_STRING@24..30
      STRING@24..30 "marker"
    NEWLINE@30..31 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    indent: none,
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..9 "a",
                    },
                    LineString {
                        string: STRING@12..15 "  b",
                    },
                    LineString {
                        string: STRING@18..19 "c",
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@20..23 "end",
            },
            value: LineString {
                string: STRING@24..30 "marker",
            },
        },
    ],
}
```

vim:ft=markdown
