crates/parser/tests/snapshots/block_string_gen_literal_clip_simple_eof_nonl.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-gen-literal-clip-simple-eof-nonl

## Input

```
key |
  a
  b
```

## CST

```
SOURCE_FILE@0..13
  ENTRY@0..13
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..13
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..9
        STRING@8..9 "a"
      NEWLINE@9..10 "\n"
      SPACE@10..12 "  "
      LINE_STRING@12..13
        STRING@12..13 "b"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    indent: none,
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..9 "a",
                    },
                    LineString {
                        string: STRING@12..13 "b",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
